<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.details.PokemonDetailsFragment">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#535353">

        <ProgressBar
            android:id="@+id/pokemonDetailsProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/pokemonDetailsErrorImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/pokemon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/stat_sys_warning" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/pokemonDetailsGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="pokemonDetailsImageView,pokemonDetailsName,
            pokemonDetailsAbilities, pokemonDetailsAbilitiesHeader,
            pokemonDetailsStatsHeader, pokemonDetailsStats"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/pokemonDetailsImageView"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/pokemon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/pokemonDetailsName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pokemonDetailsImageView"
            tools:text="Pokemon" />

        <TextView
            android:id="@+id/pokemonDetailsAbilities"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:textAlignment="textStart"
            android:textAllCaps="true"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/pokemonDetailsAbilitiesHeader"
            app:layout_constraintTop_toBottomOf="@+id/pokemonDetailsAbilitiesHeader"
            tools:text="@string/pokemon" />

        <TextView
            android:id="@+id/pokemonDetailsAbilitiesHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/abilities"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/pokemonDetailsStatsHeader"
            app:layout_constraintTop_toTopOf="@+id/pokemonDetailsStatsHeader" />

        <TextView
            android:id="@+id/pokemonDetailsStatsHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="100dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/stats"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="25sp"
            app:layout_constraintEnd_toStartOf="@+id/pokemonDetailsAbilitiesHeader"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pokemonDetailsName" />

        <TextView
            android:id="@+id/pokemonDetailsStats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:textAlignment="textStart"
            android:textAllCaps="true"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/pokemonDetailsStatsHeader"
            app:layout_constraintTop_toBottomOf="@+id/pokemonDetailsStatsHeader"
            tools:text="@string/pokemon" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>